@@ -1,11 +1,6 @@
-#!./perl -w
+#!/usr/bin/perl5.00502
 
-BEGIN {
-    chdir 't' if -d 't';
-    @INC = '../lib';
-}
-
-@tests = (split(/\nEND\n/s, <<'DONE'));
+@tests = (split(/\nEND\n/s, <<DONE));
 TEST1
 This 
 is
@@ -117,17 +112,6 @@ END
  Lines
 
 END
-TEST13 break=\d
-I saw 3 ships come sailing in
-END
-   I saw 3 ships come sailing in
-END
-TEST14 break=\d
-the.quick.brown.fox.jumps.over.the.9.lazy.dogs.for.no.good.reason.whatsoever.apparently
-END
-   the.quick.brown.fox.jumps.over.the.
- .lazy.dogs.for.no.good.reason.whatsoever.apparently
-END
 DONE
 
 
@@ -146,9 +130,7 @@ while (@st) {
 	my $in = shift(@st);
 	my $out = shift(@st);
 
-	$in =~ s/^TEST(\d+)( break=(.*))?\n//
-	    or die "bad TEST header line: $in\n";
-	local $Text::Wrap::break = $3 if defined $3;
+	$in =~ s/^TEST(\d+)?\n//;
 
 	my $back = wrap('   ', ' ', $in);
 
@@ -182,10 +164,7 @@ while(@st) {
 	my $in = shift(@st);
 	my $out = shift(@st);
 
-	$in =~ s/^TEST(\d+)( break=(.*))?\n//
-	    or die "bad TEST header line: $in\n";
-	local $Text::Wrap::break = $3 if defined $3;
-
+	$in =~ s/^TEST(\d+)?\n//;
 
 	my @in = split("\n", $in, -1);
 	@in = ((map { "$_\n" } @in[0..$#in-1]), $in[-1]);
